tests/baselines/reference/optionalBindingParametersInOverloads1.errors.txt
tests/cases/conformance/es6/destructuring/optionalBindingParametersInOverloads1.ts(8,5): error TS2345: Argument of type '[真假, 数字, ""]' is not assignable to parameter of type '[文字, 数字, 真假]'.
  Type '真假' is not assignable to type '文字'.


==== tests/cases/conformance/es6/destructuring/optionalBindingParametersInOverloads1.ts (1 errors) ====
    function foo([x, y, z] ?: [string, number, boolean]);
    function foo(...rest: any[]) {
    
    }
    
    foo(["", 0, false]);
    
    foo([false, 0, ""]);
        ~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '[真假, 数字, ""]' is not assignable to parameter of type '[文字, 数字, 真假]'.
!!! error TS2345:   Type '真假' is not assignable to type '文字'.